[feat] 新增获取节点信息接口
