# api/system/v1/resource.pb.gw.go
@@ -223,6 +223,24 @@ func local_request_SystemConfigService_GetResourceSchemas_0(ctx context.Context,
 
 }
 
+func request_SystemConfigService_ListNodes_0(ctx context.Context, marshaler runtime.Marshaler, client SystemConfigServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq ListNodesRequest
+	var metadata runtime.ServerMetadata
+
+	msg, err := client.ListNodes(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+
+}
+
+func local_request_SystemConfigService_ListNodes_0(ctx context.Context, marshaler runtime.Marshaler, server SystemConfigServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq ListNodesRequest
+	var metadata runtime.ServerMetadata
+
+	msg, err := server.ListNodes(ctx, &protoReq)
+	return msg, metadata, err
+
+}
+
 // RegisterSystemConfigServiceHandlerServer registers the http handlers for service SystemConfigService to "mux".
 // UnaryRPC     :call SystemConfigServiceServer directly.
 // StreamingRPC :currently unsupported pending https://github.com/grpc/grpc-go/issues/906.
@@ -322,6 +340,30 @@ func RegisterSystemConfigServiceHandlerServer(ctx context.Context, mux *runtime.
 		}
 
 		forward_SystemConfigService_GetResourceSchemas_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
+	mux.Handle("GET", pattern_SystemConfigService_ListNodes_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		var err error
+		ctx, err = runtime.AnnotateIncomingContext(ctx, mux, req, "/xtopus.api.system.v1.SystemConfigService/ListNodes", runtime.WithHTTPPathPattern("/v1/nodes"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_SystemConfigService_ListNodes_0(ctx, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_SystemConfigService_ListNodes_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -450,6 +492,27 @@ func RegisterSystemConfigServiceHandlerClient(ctx context.Context, mux *runtime.
 
 	})
 
+	mux.Handle("GET", pattern_SystemConfigService_ListNodes_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		var err error
+		ctx, err = runtime.AnnotateContext(ctx, mux, req, "/xtopus.api.system.v1.SystemConfigService/ListNodes", runtime.WithHTTPPathPattern("/v1/nodes"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_SystemConfigService_ListNodes_0(ctx, inboundMarshaler, client, req, pathParams)
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_SystemConfigService_ListNodes_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
 	return nil
 }
 
@@ -461,6 +524,8 @@ var (
 	pattern_SystemConfigService_UpdateResourceConfig_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2}, []string{"v1", "resources", "name"}, ""))
 
 	pattern_SystemConfigService_GetResourceSchemas_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "schemas"}, ""))
+
+	pattern_SystemConfigService_ListNodes_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "nodes"}, ""))
 )
 
 var (
@@ -471,4 +536,6 @@ var (
 	forward_SystemConfigService_UpdateResourceConfig_0 = runtime.ForwardResponseMessage
 
 	forward_SystemConfigService_GetResourceSchemas_0 = runtime.ForwardResponseMessage
+
+	forward_SystemConfigService_ListNodes_0 = runtime.ForwardResponseMessage
 )
